samples/_failures_safe/1761792049_1ac452_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a67f4e09.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a67f4e09.c:146:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  146 |     int count
      |     ^~~
./samples/SAFE/__tmp_a67f4e09.c:146:5: error: expected declaration or statement at end of input
